implement password reset functionality
update SessionManager for more helper functions